Kaggle Notebook | Bankruptcy Classification Xgboost | Version 2

--- a/bankruptcy-classification-xgboost.ipynb
+++ b/bankruptcy-classification-xgboost.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db1e9195",
+   "id": "47fff292",
    "metadata": {
     "papermill": {
-     "duration": 0.012628,
-     "end_time": "2022-09-14T14:43:38.009342",
+     "duration": 0.006686,
+     "end_time": "2022-09-14T14:48:13.854094",
      "exception": false,
-     "start_time": "2022-09-14T14:43:37.996714",
+     "start_time": "2022-09-14T14:48:13.847408",
      "status": "completed"
     },
     "tags": []
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d436eec",
+   "id": "b2b19a70",
    "metadata": {
     "papermill": {
-     "duration": 0.005517,
-     "end_time": "2022-09-14T14:43:38.021357",
+     "duration": 0.005015,
+     "end_time": "2022-09-14T14:48:13.864602",
      "exception": false,
-     "start_time": "2022-09-14T14:43:38.015840",
+     "start_time": "2022-09-14T14:48:13.859587",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05cffff0",
+   "id": "5c6af5a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:43:38.036022Z",
-     "iopub.status.busy": "2022-09-14T14:43:38.034625Z",
-     "iopub.status.idle": "2022-09-14T14:43:39.540024Z",
-     "shell.execute_reply": "2022-09-14T14:43:39.538711Z"
+     "iopub.execute_input": "2022-09-14T14:48:13.878182Z",
+     "iopub.status.busy": "2022-09-14T14:48:13.877151Z",
+     "iopub.status.idle": "2022-09-14T14:48:15.096893Z",
+     "shell.execute_reply": "2022-09-14T14:48:15.096002Z"
     },
     "papermill": {
-     "duration": 1.516445,
-     "end_time": "2022-09-14T14:43:39.543756",
+     "duration": 1.229775,
+     "end_time": "2022-09-14T14:48:15.099715",
      "exception": false,
-     "start_time": "2022-09-14T14:43:38.027311",
+     "start_time": "2022-09-14T14:48:13.869940",
      "status": "completed"
     },
     "tags": []
@@ -74,25 +74,26 @@
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
     "import xgboost as xgb\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ba00a29",
+   "id": "0733bcd0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:43:39.558909Z",
-     "iopub.status.busy": "2022-09-14T14:43:39.558468Z",
-     "iopub.status.idle": "2022-09-14T14:43:39.564482Z",
-     "shell.execute_reply": "2022-09-14T14:43:39.563141Z"
+     "iopub.execute_input": "2022-09-14T14:48:15.111684Z",
+     "iopub.status.busy": "2022-09-14T14:48:15.111279Z",
+     "iopub.status.idle": "2022-09-14T14:48:15.117026Z",
+     "shell.execute_reply": "2022-09-14T14:48:15.115897Z"
     },
     "papermill": {
-     "duration": 0.016859,
-     "end_time": "2022-09-14T14:43:39.567521",
+     "duration": 0.014288,
+     "end_time": "2022-09-14T14:48:15.119290",
      "exception": false,
-     "start_time": "2022-09-14T14:43:39.550662",
+     "start_time": "2022-09-14T14:48:15.105002",
      "status": "completed"
     },
     "tags": []
@@ -106,19 +107,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1b17e02c",
+   "id": "12fbf85f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:43:39.581378Z",
-     "iopub.status.busy": "2022-09-14T14:43:39.579861Z",
-     "iopub.status.idle": "2022-09-14T14:43:40.038161Z",
-     "shell.execute_reply": "2022-09-14T14:43:40.036863Z"
+     "iopub.execute_input": "2022-09-14T14:48:15.130961Z",
+     "iopub.status.busy": "2022-09-14T14:48:15.130545Z",
+     "iopub.status.idle": "2022-09-14T14:48:15.624174Z",
+     "shell.execute_reply": "2022-09-14T14:48:15.622994Z"
     },
     "papermill": {
-     "duration": 0.468384,
-     "end_time": "2022-09-14T14:43:40.041201",
+     "duration": 0.502715,
+     "end_time": "2022-09-14T14:48:15.627026",
      "exception": false,
-     "start_time": "2022-09-14T14:43:39.572817",
+     "start_time": "2022-09-14T14:48:15.124311",
      "status": "completed"
     },
     "tags": []
@@ -333,13 +334,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba73f005",
+   "id": "71396cb6",
    "metadata": {
     "papermill": {
-     "duration": 0.005386,
-     "end_time": "2022-09-14T14:43:40.052635",
+     "duration": 0.005155,
+     "end_time": "2022-09-14T14:48:15.637783",
      "exception": false,
-     "start_time": "2022-09-14T14:43:40.047249",
+     "start_time": "2022-09-14T14:48:15.632628",
      "status": "completed"
     },
     "tags": []
@@ -351,19 +352,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6453490a",
+   "id": "d29c4639",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:43:40.066433Z",
-     "iopub.status.busy": "2022-09-14T14:43:40.065688Z",
-     "iopub.status.idle": "2022-09-14T14:43:40.089069Z",
-     "shell.execute_reply": "2022-09-14T14:43:40.086997Z"
+     "iopub.execute_input": "2022-09-14T14:48:15.650931Z",
+     "iopub.status.busy": "2022-09-14T14:48:15.649768Z",
+     "iopub.status.idle": "2022-09-14T14:48:15.671469Z",
+     "shell.execute_reply": "2022-09-14T14:48:15.670335Z"
     },
     "papermill": {
-     "duration": 0.033847,
-     "end_time": "2022-09-14T14:43:40.092070",
+     "duration": 0.031035,
+     "end_time": "2022-09-14T14:48:15.674135",
      "exception": false,
-     "start_time": "2022-09-14T14:43:40.058223",
+     "start_time": "2022-09-14T14:48:15.643100",
      "status": "completed"
     },
     "tags": []
@@ -381,13 +382,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3906045a",
+   "id": "5b4c5fad",
    "metadata": {
     "papermill": {
-     "duration": 0.005228,
-     "end_time": "2022-09-14T14:43:40.103062",
+     "duration": 0.005509,
+     "end_time": "2022-09-14T14:48:15.685248",
      "exception": false,
-     "start_time": "2022-09-14T14:43:40.097834",
+     "start_time": "2022-09-14T14:48:15.679739",
      "status": "completed"
     },
     "tags": []
@@ -401,19 +402,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "88616a02",
+   "id": "d3604b85",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:43:40.117351Z",
-     "iopub.status.busy": "2022-09-14T14:43:40.116020Z",
-     "iopub.status.idle": "2022-09-14T14:43:46.618153Z",
-     "shell.execute_reply": "2022-09-14T14:43:46.617109Z"
+     "iopub.execute_input": "2022-09-14T14:48:15.697870Z",
+     "iopub.status.busy": "2022-09-14T14:48:15.697425Z",
+     "iopub.status.idle": "2022-09-14T14:48:22.262977Z",
+     "shell.execute_reply": "2022-09-14T14:48:22.261777Z"
     },
     "papermill": {
-     "duration": 6.51251,
-     "end_time": "2022-09-14T14:43:46.621280",
+     "duration": 6.57489,
+     "end_time": "2022-09-14T14:48:22.265617",
      "exception": false,
-     "start_time": "2022-09-14T14:43:40.108770",
+     "start_time": "2022-09-14T14:48:15.690727",
      "status": "completed"
     },
     "tags": []
@@ -423,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14:43:40] WARNING: ../src/learner.cc:627: \n",
+      "[14:48:15] WARNING: ../src/learner.cc:627: \n",
       "Parameters: { \"enable_categorical\", \"missing\", \"n_estimators\", \"use_label_encoder\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -431,7 +432,7 @@
       "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
       "\n",
       "\n",
-      "[14:43:40] WARNING: ../src/learner.cc:627: \n",
+      "[14:48:15] WARNING: ../src/learner.cc:627: \n",
       "Parameters: { \"enable_categorical\", \"missing\", \"n_estimators\", \"use_label_encoder\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -439,7 +440,7 @@
       "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
       "\n",
       "\n",
-      "[14:43:40] WARNING: ../src/learner.cc:627: \n",
+      "[14:48:15] WARNING: ../src/learner.cc:627: \n",
       "Parameters: { \"enable_categorical\", \"missing\", \"n_estimators\", \"use_label_encoder\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -482,13 +483,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a1c47f1",
+   "id": "ab2f27a9",
    "metadata": {
     "papermill": {
-     "duration": 0.005958,
-     "end_time": "2022-09-14T14:43:46.633244",
+     "duration": 0.005476,
+     "end_time": "2022-09-14T14:48:22.277477",
      "exception": false,
-     "start_time": "2022-09-14T14:43:46.627286",
+     "start_time": "2022-09-14T14:48:22.272001",
      "status": "completed"
     },
     "tags": []
@@ -507,19 +508,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a4c0b431",
+   "id": "75b91203",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:43:46.647163Z",
-     "iopub.status.busy": "2022-09-14T14:43:46.646713Z",
-     "iopub.status.idle": "2022-09-14T14:44:24.101754Z",
-     "shell.execute_reply": "2022-09-14T14:44:24.100472Z"
+     "iopub.execute_input": "2022-09-14T14:48:22.290346Z",
+     "iopub.status.busy": "2022-09-14T14:48:22.289959Z",
+     "iopub.status.idle": "2022-09-14T14:48:57.883329Z",
+     "shell.execute_reply": "2022-09-14T14:48:57.882195Z"
     },
     "papermill": {
-     "duration": 37.465628,
-     "end_time": "2022-09-14T14:44:24.104799",
+     "duration": 35.602899,
+     "end_time": "2022-09-14T14:48:57.886075",
      "exception": false,
-     "start_time": "2022-09-14T14:43:46.639171",
+     "start_time": "2022-09-14T14:48:22.283176",
      "status": "completed"
     },
     "tags": []
@@ -571,13 +572,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e796988",
+   "id": "11fc35e2",
    "metadata": {
     "papermill": {
-     "duration": 0.005702,
-     "end_time": "2022-09-14T14:44:24.117121",
+     "duration": 0.005444,
+     "end_time": "2022-09-14T14:48:57.898211",
      "exception": false,
-     "start_time": "2022-09-14T14:44:24.111419",
+     "start_time": "2022-09-14T14:48:57.892767",
      "status": "completed"
     },
     "tags": []
@@ -589,22 +590,22 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7dde05f3",
+   "id": "080dcd14",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:44:24.131280Z",
-     "iopub.status.busy": "2022-09-14T14:44:24.130824Z",
-     "iopub.status.idle": "2022-09-14T14:44:24.139576Z",
-     "shell.execute_reply": "2022-09-14T14:44:24.138311Z"
+     "iopub.execute_input": "2022-09-14T14:48:57.912161Z",
+     "iopub.status.busy": "2022-09-14T14:48:57.910993Z",
+     "iopub.status.idle": "2022-09-14T14:48:57.918839Z",
+     "shell.execute_reply": "2022-09-14T14:48:57.918040Z"
     },
     "jupyter": {
      "source_hidden": true
     },
     "papermill": {
-     "duration": 0.019205,
-     "end_time": "2022-09-14T14:44:24.142322",
+     "duration": 0.017331,
+     "end_time": "2022-09-14T14:48:57.921085",
      "exception": false,
-     "start_time": "2022-09-14T14:44:24.123117",
+     "start_time": "2022-09-14T14:48:57.903754",
      "status": "completed"
     },
     "tags": []
@@ -629,19 +630,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "754f7f7a",
+   "id": "e7ce16ab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:44:24.158611Z",
-     "iopub.status.busy": "2022-09-14T14:44:24.157387Z",
-     "iopub.status.idle": "2022-09-14T14:44:26.264946Z",
-     "shell.execute_reply": "2022-09-14T14:44:26.263651Z"
+     "iopub.execute_input": "2022-09-14T14:48:57.935684Z",
+     "iopub.status.busy": "2022-09-14T14:48:57.934527Z",
+     "iopub.status.idle": "2022-09-14T14:48:59.999425Z",
+     "shell.execute_reply": "2022-09-14T14:48:59.998635Z"
     },
     "papermill": {
-     "duration": 2.119107,
-     "end_time": "2022-09-14T14:44:26.267578",
+     "duration": 2.073843,
+     "end_time": "2022-09-14T14:49:00.001537",
      "exception": false,
-     "start_time": "2022-09-14T14:44:24.148471",
+     "start_time": "2022-09-14T14:48:57.927694",
      "status": "completed"
     },
     "tags": []
@@ -701,13 +702,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f3b0fd8",
+   "id": "7e52d613",
    "metadata": {
     "papermill": {
-     "duration": 0.008103,
-     "end_time": "2022-09-14T14:44:26.284305",
+     "duration": 0.008045,
+     "end_time": "2022-09-14T14:49:00.018253",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.276202",
+     "start_time": "2022-09-14T14:49:00.010208",
      "status": "completed"
     },
     "tags": []
@@ -718,13 +719,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa94076",
+   "id": "dea0080d",
    "metadata": {
     "papermill": {
-     "duration": 0.008238,
-     "end_time": "2022-09-14T14:44:26.301203",
+     "duration": 0.007878,
+     "end_time": "2022-09-14T14:49:00.034398",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.292965",
+     "start_time": "2022-09-14T14:49:00.026520",
      "status": "completed"
     },
     "tags": []
@@ -736,22 +737,22 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0375b026",
+   "id": "45c0abfd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:44:26.319771Z",
-     "iopub.status.busy": "2022-09-14T14:44:26.319350Z",
-     "iopub.status.idle": "2022-09-14T14:44:26.326877Z",
-     "shell.execute_reply": "2022-09-14T14:44:26.325625Z"
+     "iopub.execute_input": "2022-09-14T14:49:00.052796Z",
+     "iopub.status.busy": "2022-09-14T14:49:00.052191Z",
+     "iopub.status.idle": "2022-09-14T14:49:00.058265Z",
+     "shell.execute_reply": "2022-09-14T14:49:00.057221Z"
     },
     "jupyter": {
      "source_hidden": true
     },
     "papermill": {
-     "duration": 0.01961,
-     "end_time": "2022-09-14T14:44:26.329254",
+     "duration": 0.018001,
+     "end_time": "2022-09-14T14:49:00.060628",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.309644",
+     "start_time": "2022-09-14T14:49:00.042627",
      "status": "completed"
     },
     "tags": []
@@ -774,19 +775,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "efbe8418",
+   "id": "4178426e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:44:26.347802Z",
-     "iopub.status.busy": "2022-09-14T14:44:26.347390Z",
-     "iopub.status.idle": "2022-09-14T14:44:26.376921Z",
-     "shell.execute_reply": "2022-09-14T14:44:26.375058Z"
+     "iopub.execute_input": "2022-09-14T14:49:00.079305Z",
+     "iopub.status.busy": "2022-09-14T14:49:00.078592Z",
+     "iopub.status.idle": "2022-09-14T14:49:00.114973Z",
+     "shell.execute_reply": "2022-09-14T14:49:00.113467Z"
     },
     "papermill": {
-     "duration": 0.043101,
-     "end_time": "2022-09-14T14:44:26.380707",
+     "duration": 0.04826,
+     "end_time": "2022-09-14T14:49:00.117377",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.337606",
+     "start_time": "2022-09-14T14:49:00.069117",
      "status": "completed"
     },
     "tags": []
@@ -822,13 +823,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be58dcd",
+   "id": "1dfa4be5",
    "metadata": {
     "papermill": {
-     "duration": 0.008266,
-     "end_time": "2022-09-14T14:44:26.397754",
+     "duration": 0.008085,
+     "end_time": "2022-09-14T14:49:00.134047",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.389488",
+     "start_time": "2022-09-14T14:49:00.125962",
      "status": "completed"
     },
     "tags": []
@@ -838,14 +839,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "878cf4ec",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-09-14T14:49:00.152932Z",
+     "iopub.status.busy": "2022-09-14T14:49:00.152231Z",
+     "iopub.status.idle": "2022-09-14T14:49:00.160480Z",
+     "shell.execute_reply": "2022-09-14T14:49:00.159248Z"
+    },
+    "papermill": {
+     "duration": 0.02,
+     "end_time": "2022-09-14T14:49:00.162592",
+     "exception": false,
+     "start_time": "2022-09-14T14:49:00.142592",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9850640113798008"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "461502b7",
+   "id": "cd97ddfe",
    "metadata": {
     "papermill": {
-     "duration": 0.008524,
-     "end_time": "2022-09-14T14:44:26.414799",
+     "duration": 0.008163,
+     "end_time": "2022-09-14T14:49:00.179191",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.406275",
+     "start_time": "2022-09-14T14:49:00.171028",
      "status": "completed"
     },
     "tags": []
@@ -856,20 +893,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ac3bbed5",
+   "execution_count": 12,
+   "id": "cea5489c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:44:26.434912Z",
-     "iopub.status.busy": "2022-09-14T14:44:26.433889Z",
-     "iopub.status.idle": "2022-09-14T14:44:27.682707Z",
-     "shell.execute_reply": "2022-09-14T14:44:27.681431Z"
+     "iopub.execute_input": "2022-09-14T14:49:00.198260Z",
+     "iopub.status.busy": "2022-09-14T14:49:00.197542Z",
+     "iopub.status.idle": "2022-09-14T14:49:01.423326Z",
+     "shell.execute_reply": "2022-09-14T14:49:01.422158Z"
     },
     "papermill": {
-     "duration": 1.262284,
-     "end_time": "2022-09-14T14:44:27.685773",
+     "duration": 1.237741,
+     "end_time": "2022-09-14T14:49:01.425653",
      "exception": false,
-     "start_time": "2022-09-14T14:44:26.423489",
+     "start_time": "2022-09-14T14:49:00.187912",
      "status": "completed"
     },
     "tags": []
@@ -888,26 +925,6 @@
    ],
    "source": [
     "xgb.plot_importance(xgb1, max_num_features = 64);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee4a426a",
-   "metadata": {
-    "papermill": {
-     "duration": 0.009316,
-     "end_time": "2022-09-14T14:44:27.704843",
-     "exception": false,
-     "start_time": "2022-09-14T14:44:27.695527",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "Gradient Boosting performs way better than the intial model. \n",
-    "* It has 81% chance of correctly classifying bankrupt from non=baankrupt companies and False Positive rate of 0.07%.\n",
-    "* Attr 27, 5, 46 contribute the most to the model and are the ones who frequently used when constructing the model.\n",
-    "* Previous Notebook https://www.kaggle.com/code/omar1092837465/bankruptcy-classification-logistic-regression?scriptVersionId=105667651"
    ]
   }
  ],
@@ -931,14 +948,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 63.71511,
-   "end_time": "2022-09-14T14:44:30.337081",
+   "duration": 58.943857,
+   "end_time": "2022-09-14T14:49:04.056314",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-09-14T14:43:26.621971",
+   "start_time": "2022-09-14T14:48:05.112457",
    "version": "2.3.4"
   }
  },
