Kaggle Notebook | Bankruptcy Classification Xgboost | Submission

--- a/bankruptcy-classification-xgboost.ipynb
+++ b/bankruptcy-classification-xgboost.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "47fff292",
+   "id": "4563897e",
    "metadata": {
     "papermill": {
-     "duration": 0.006686,
-     "end_time": "2022-09-14T14:48:13.854094",
+     "duration": 0.007097,
+     "end_time": "2022-09-14T14:59:32.975226",
      "exception": false,
-     "start_time": "2022-09-14T14:48:13.847408",
+     "start_time": "2022-09-14T14:59:32.968129",
      "status": "completed"
     },
     "tags": []
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b19a70",
+   "id": "107580a0",
    "metadata": {
     "papermill": {
-     "duration": 0.005015,
-     "end_time": "2022-09-14T14:48:13.864602",
+     "duration": 0.005897,
+     "end_time": "2022-09-14T14:59:32.987130",
      "exception": false,
-     "start_time": "2022-09-14T14:48:13.859587",
+     "start_time": "2022-09-14T14:59:32.981233",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c6af5a2",
+   "id": "b98dff39",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:13.878182Z",
-     "iopub.status.busy": "2022-09-14T14:48:13.877151Z",
-     "iopub.status.idle": "2022-09-14T14:48:15.096893Z",
-     "shell.execute_reply": "2022-09-14T14:48:15.096002Z"
+     "iopub.execute_input": "2022-09-14T14:59:33.001603Z",
+     "iopub.status.busy": "2022-09-14T14:59:33.000832Z",
+     "iopub.status.idle": "2022-09-14T14:59:34.344229Z",
+     "shell.execute_reply": "2022-09-14T14:59:34.343042Z"
     },
     "papermill": {
-     "duration": 1.229775,
-     "end_time": "2022-09-14T14:48:15.099715",
+     "duration": 1.354227,
+     "end_time": "2022-09-14T14:59:34.347430",
      "exception": false,
-     "start_time": "2022-09-14T14:48:13.869940",
+     "start_time": "2022-09-14T14:59:32.993203",
      "status": "completed"
     },
     "tags": []
@@ -81,19 +81,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0733bcd0",
+   "id": "1715d186",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:15.111684Z",
-     "iopub.status.busy": "2022-09-14T14:48:15.111279Z",
-     "iopub.status.idle": "2022-09-14T14:48:15.117026Z",
-     "shell.execute_reply": "2022-09-14T14:48:15.115897Z"
+     "iopub.execute_input": "2022-09-14T14:59:34.368340Z",
+     "iopub.status.busy": "2022-09-14T14:59:34.365362Z",
+     "iopub.status.idle": "2022-09-14T14:59:34.374570Z",
+     "shell.execute_reply": "2022-09-14T14:59:34.373158Z"
     },
     "papermill": {
-     "duration": 0.014288,
-     "end_time": "2022-09-14T14:48:15.119290",
+     "duration": 0.024176,
+     "end_time": "2022-09-14T14:59:34.378131",
      "exception": false,
-     "start_time": "2022-09-14T14:48:15.105002",
+     "start_time": "2022-09-14T14:59:34.353955",
      "status": "completed"
     },
     "tags": []
@@ -107,19 +107,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12fbf85f",
+   "id": "4ff7dc7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:15.130961Z",
-     "iopub.status.busy": "2022-09-14T14:48:15.130545Z",
-     "iopub.status.idle": "2022-09-14T14:48:15.624174Z",
-     "shell.execute_reply": "2022-09-14T14:48:15.622994Z"
+     "iopub.execute_input": "2022-09-14T14:59:34.395694Z",
+     "iopub.status.busy": "2022-09-14T14:59:34.395125Z",
+     "iopub.status.idle": "2022-09-14T14:59:34.852400Z",
+     "shell.execute_reply": "2022-09-14T14:59:34.851025Z"
     },
     "papermill": {
-     "duration": 0.502715,
-     "end_time": "2022-09-14T14:48:15.627026",
+     "duration": 0.467871,
+     "end_time": "2022-09-14T14:59:34.855495",
      "exception": false,
-     "start_time": "2022-09-14T14:48:15.124311",
+     "start_time": "2022-09-14T14:59:34.387624",
      "status": "completed"
     },
     "tags": []
@@ -334,13 +334,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71396cb6",
+   "id": "70a7d9c2",
    "metadata": {
     "papermill": {
-     "duration": 0.005155,
-     "end_time": "2022-09-14T14:48:15.637783",
+     "duration": 0.005624,
+     "end_time": "2022-09-14T14:59:34.867277",
      "exception": false,
-     "start_time": "2022-09-14T14:48:15.632628",
+     "start_time": "2022-09-14T14:59:34.861653",
      "status": "completed"
     },
     "tags": []
@@ -352,19 +352,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d29c4639",
+   "id": "475de200",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:15.650931Z",
-     "iopub.status.busy": "2022-09-14T14:48:15.649768Z",
-     "iopub.status.idle": "2022-09-14T14:48:15.671469Z",
-     "shell.execute_reply": "2022-09-14T14:48:15.670335Z"
+     "iopub.execute_input": "2022-09-14T14:59:34.882419Z",
+     "iopub.status.busy": "2022-09-14T14:59:34.881049Z",
+     "iopub.status.idle": "2022-09-14T14:59:34.903813Z",
+     "shell.execute_reply": "2022-09-14T14:59:34.902426Z"
     },
     "papermill": {
-     "duration": 0.031035,
-     "end_time": "2022-09-14T14:48:15.674135",
+     "duration": 0.033331,
+     "end_time": "2022-09-14T14:59:34.906502",
      "exception": false,
-     "start_time": "2022-09-14T14:48:15.643100",
+     "start_time": "2022-09-14T14:59:34.873171",
      "status": "completed"
     },
     "tags": []
@@ -382,13 +382,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b4c5fad",
+   "id": "4b3b0f10",
    "metadata": {
     "papermill": {
-     "duration": 0.005509,
-     "end_time": "2022-09-14T14:48:15.685248",
+     "duration": 0.00594,
+     "end_time": "2022-09-14T14:59:34.918813",
      "exception": false,
-     "start_time": "2022-09-14T14:48:15.679739",
+     "start_time": "2022-09-14T14:59:34.912873",
      "status": "completed"
     },
     "tags": []
@@ -402,19 +402,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3604b85",
+   "id": "104f56ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:15.697870Z",
-     "iopub.status.busy": "2022-09-14T14:48:15.697425Z",
-     "iopub.status.idle": "2022-09-14T14:48:22.262977Z",
-     "shell.execute_reply": "2022-09-14T14:48:22.261777Z"
+     "iopub.execute_input": "2022-09-14T14:59:34.932804Z",
+     "iopub.status.busy": "2022-09-14T14:59:34.932287Z",
+     "iopub.status.idle": "2022-09-14T14:59:41.316350Z",
+     "shell.execute_reply": "2022-09-14T14:59:41.315288Z"
     },
     "papermill": {
-     "duration": 6.57489,
-     "end_time": "2022-09-14T14:48:22.265617",
+     "duration": 6.393866,
+     "end_time": "2022-09-14T14:59:41.318811",
      "exception": false,
-     "start_time": "2022-09-14T14:48:15.690727",
+     "start_time": "2022-09-14T14:59:34.924945",
      "status": "completed"
     },
     "tags": []
@@ -424,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14:48:15] WARNING: ../src/learner.cc:627: \n",
+      "[14:59:35] WARNING: ../src/learner.cc:627: \n",
       "Parameters: { \"enable_categorical\", \"missing\", \"n_estimators\", \"use_label_encoder\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -432,7 +432,7 @@
       "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
       "\n",
       "\n",
-      "[14:48:15] WARNING: ../src/learner.cc:627: \n",
+      "[14:59:35] WARNING: ../src/learner.cc:627: \n",
       "Parameters: { \"enable_categorical\", \"missing\", \"n_estimators\", \"use_label_encoder\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -440,7 +440,7 @@
       "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
       "\n",
       "\n",
-      "[14:48:15] WARNING: ../src/learner.cc:627: \n",
+      "[14:59:35] WARNING: ../src/learner.cc:627: \n",
       "Parameters: { \"enable_categorical\", \"missing\", \"n_estimators\", \"use_label_encoder\" } might not be used.\n",
       "\n",
       "  This could be a false alarm, with some parameters getting used by language bindings but\n",
@@ -483,13 +483,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab2f27a9",
+   "id": "d69c2553",
    "metadata": {
     "papermill": {
-     "duration": 0.005476,
-     "end_time": "2022-09-14T14:48:22.277477",
+     "duration": 0.005961,
+     "end_time": "2022-09-14T14:59:41.331125",
      "exception": false,
-     "start_time": "2022-09-14T14:48:22.272001",
+     "start_time": "2022-09-14T14:59:41.325164",
      "status": "completed"
     },
     "tags": []
@@ -508,19 +508,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "75b91203",
+   "id": "1d15dce5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:22.290346Z",
-     "iopub.status.busy": "2022-09-14T14:48:22.289959Z",
-     "iopub.status.idle": "2022-09-14T14:48:57.883329Z",
-     "shell.execute_reply": "2022-09-14T14:48:57.882195Z"
+     "iopub.execute_input": "2022-09-14T14:59:41.345454Z",
+     "iopub.status.busy": "2022-09-14T14:59:41.345047Z",
+     "iopub.status.idle": "2022-09-14T15:00:17.654813Z",
+     "shell.execute_reply": "2022-09-14T15:00:17.653732Z"
     },
     "papermill": {
-     "duration": 35.602899,
-     "end_time": "2022-09-14T14:48:57.886075",
+     "duration": 36.320307,
+     "end_time": "2022-09-14T15:00:17.657518",
      "exception": false,
-     "start_time": "2022-09-14T14:48:22.283176",
+     "start_time": "2022-09-14T14:59:41.337211",
      "status": "completed"
     },
     "tags": []
@@ -572,13 +572,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11fc35e2",
+   "id": "e31d43e6",
    "metadata": {
     "papermill": {
-     "duration": 0.005444,
-     "end_time": "2022-09-14T14:48:57.898211",
+     "duration": 0.006181,
+     "end_time": "2022-09-14T15:00:17.671015",
      "exception": false,
-     "start_time": "2022-09-14T14:48:57.892767",
+     "start_time": "2022-09-14T15:00:17.664834",
      "status": "completed"
     },
     "tags": []
@@ -590,22 +590,22 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "080dcd14",
+   "id": "940a1574",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:57.912161Z",
-     "iopub.status.busy": "2022-09-14T14:48:57.910993Z",
-     "iopub.status.idle": "2022-09-14T14:48:57.918839Z",
-     "shell.execute_reply": "2022-09-14T14:48:57.918040Z"
+     "iopub.execute_input": "2022-09-14T15:00:17.686068Z",
+     "iopub.status.busy": "2022-09-14T15:00:17.685185Z",
+     "iopub.status.idle": "2022-09-14T15:00:17.693228Z",
+     "shell.execute_reply": "2022-09-14T15:00:17.691851Z"
     },
     "jupyter": {
      "source_hidden": true
     },
     "papermill": {
-     "duration": 0.017331,
-     "end_time": "2022-09-14T14:48:57.921085",
+     "duration": 0.018479,
+     "end_time": "2022-09-14T15:00:17.695843",
      "exception": false,
-     "start_time": "2022-09-14T14:48:57.903754",
+     "start_time": "2022-09-14T15:00:17.677364",
      "status": "completed"
     },
     "tags": []
@@ -630,19 +630,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e7ce16ab",
+   "id": "49cf36d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:48:57.935684Z",
-     "iopub.status.busy": "2022-09-14T14:48:57.934527Z",
-     "iopub.status.idle": "2022-09-14T14:48:59.999425Z",
-     "shell.execute_reply": "2022-09-14T14:48:59.998635Z"
+     "iopub.execute_input": "2022-09-14T15:00:17.711709Z",
+     "iopub.status.busy": "2022-09-14T15:00:17.711303Z",
+     "iopub.status.idle": "2022-09-14T15:00:19.960176Z",
+     "shell.execute_reply": "2022-09-14T15:00:19.958811Z"
     },
     "papermill": {
-     "duration": 2.073843,
-     "end_time": "2022-09-14T14:49:00.001537",
+     "duration": 2.259837,
+     "end_time": "2022-09-14T15:00:19.963180",
      "exception": false,
-     "start_time": "2022-09-14T14:48:57.927694",
+     "start_time": "2022-09-14T15:00:17.703343",
      "status": "completed"
     },
     "tags": []
@@ -702,13 +702,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e52d613",
+   "id": "35735a55",
    "metadata": {
     "papermill": {
-     "duration": 0.008045,
-     "end_time": "2022-09-14T14:49:00.018253",
+     "duration": 0.00967,
+     "end_time": "2022-09-14T15:00:19.982630",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.010208",
+     "start_time": "2022-09-14T15:00:19.972960",
      "status": "completed"
     },
     "tags": []
@@ -719,13 +719,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea0080d",
+   "id": "bbbf8556",
    "metadata": {
     "papermill": {
-     "duration": 0.007878,
-     "end_time": "2022-09-14T14:49:00.034398",
+     "duration": 0.009366,
+     "end_time": "2022-09-14T15:00:20.001536",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.026520",
+     "start_time": "2022-09-14T15:00:19.992170",
      "status": "completed"
     },
     "tags": []
@@ -737,22 +737,22 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "45c0abfd",
+   "id": "a77a29d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:49:00.052796Z",
-     "iopub.status.busy": "2022-09-14T14:49:00.052191Z",
-     "iopub.status.idle": "2022-09-14T14:49:00.058265Z",
-     "shell.execute_reply": "2022-09-14T14:49:00.057221Z"
+     "iopub.execute_input": "2022-09-14T15:00:20.022217Z",
+     "iopub.status.busy": "2022-09-14T15:00:20.021724Z",
+     "iopub.status.idle": "2022-09-14T15:00:20.029201Z",
+     "shell.execute_reply": "2022-09-14T15:00:20.027660Z"
     },
     "jupyter": {
      "source_hidden": true
     },
     "papermill": {
-     "duration": 0.018001,
-     "end_time": "2022-09-14T14:49:00.060628",
+     "duration": 0.020837,
+     "end_time": "2022-09-14T15:00:20.031668",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.042627",
+     "start_time": "2022-09-14T15:00:20.010831",
      "status": "completed"
     },
     "tags": []
@@ -775,19 +775,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4178426e",
+   "id": "307ae0a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:49:00.079305Z",
-     "iopub.status.busy": "2022-09-14T14:49:00.078592Z",
-     "iopub.status.idle": "2022-09-14T14:49:00.114973Z",
-     "shell.execute_reply": "2022-09-14T14:49:00.113467Z"
+     "iopub.execute_input": "2022-09-14T15:00:20.053316Z",
+     "iopub.status.busy": "2022-09-14T15:00:20.052147Z",
+     "iopub.status.idle": "2022-09-14T15:00:20.086678Z",
+     "shell.execute_reply": "2022-09-14T15:00:20.084786Z"
     },
     "papermill": {
-     "duration": 0.04826,
-     "end_time": "2022-09-14T14:49:00.117377",
+     "duration": 0.049782,
+     "end_time": "2022-09-14T15:00:20.090896",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.069117",
+     "start_time": "2022-09-14T15:00:20.041114",
      "status": "completed"
     },
     "tags": []
@@ -823,13 +823,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dfa4be5",
+   "id": "be41796c",
    "metadata": {
     "papermill": {
-     "duration": 0.008085,
-     "end_time": "2022-09-14T14:49:00.134047",
+     "duration": 0.009564,
+     "end_time": "2022-09-14T15:00:20.110221",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.125962",
+     "start_time": "2022-09-14T15:00:20.100657",
      "status": "completed"
     },
     "tags": []
@@ -841,19 +841,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "878cf4ec",
+   "id": "690b6ce3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:49:00.152932Z",
-     "iopub.status.busy": "2022-09-14T14:49:00.152231Z",
-     "iopub.status.idle": "2022-09-14T14:49:00.160480Z",
-     "shell.execute_reply": "2022-09-14T14:49:00.159248Z"
+     "iopub.execute_input": "2022-09-14T15:00:20.132781Z",
+     "iopub.status.busy": "2022-09-14T15:00:20.131796Z",
+     "iopub.status.idle": "2022-09-14T15:00:20.141803Z",
+     "shell.execute_reply": "2022-09-14T15:00:20.140538Z"
     },
     "papermill": {
-     "duration": 0.02,
-     "end_time": "2022-09-14T14:49:00.162592",
+     "duration": 0.024701,
+     "end_time": "2022-09-14T15:00:20.144869",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.142592",
+     "start_time": "2022-09-14T15:00:20.120168",
      "status": "completed"
     },
     "tags": []
@@ -876,13 +876,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd97ddfe",
+   "id": "c786d1f9",
    "metadata": {
     "papermill": {
-     "duration": 0.008163,
-     "end_time": "2022-09-14T14:49:00.179191",
+     "duration": 0.010644,
+     "end_time": "2022-09-14T15:00:20.165942",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.171028",
+     "start_time": "2022-09-14T15:00:20.155298",
      "status": "completed"
     },
     "tags": []
@@ -894,19 +894,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cea5489c",
+   "id": "a97a3c9d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-09-14T14:49:00.198260Z",
-     "iopub.status.busy": "2022-09-14T14:49:00.197542Z",
-     "iopub.status.idle": "2022-09-14T14:49:01.423326Z",
-     "shell.execute_reply": "2022-09-14T14:49:01.422158Z"
+     "iopub.execute_input": "2022-09-14T15:00:20.187732Z",
+     "iopub.status.busy": "2022-09-14T15:00:20.186978Z",
+     "iopub.status.idle": "2022-09-14T15:00:21.502593Z",
+     "shell.execute_reply": "2022-09-14T15:00:21.501768Z"
     },
     "papermill": {
-     "duration": 1.237741,
-     "end_time": "2022-09-14T14:49:01.425653",
+     "duration": 1.329776,
+     "end_time": "2022-09-14T15:00:21.505518",
      "exception": false,
-     "start_time": "2022-09-14T14:49:00.187912",
+     "start_time": "2022-09-14T15:00:20.175742",
      "status": "completed"
     },
     "tags": []
@@ -925,6 +925,50 @@
    ],
    "source": [
     "xgb.plot_importance(xgb1, max_num_features = 64);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53aefbe5",
+   "metadata": {
+    "papermill": {
+     "duration": 0.01113,
+     "end_time": "2022-09-14T15:00:21.528233",
+     "exception": false,
+     "start_time": "2022-09-14T15:00:21.517103",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Saving Ouput\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a6d094c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-09-14T15:00:21.552385Z",
+     "iopub.status.busy": "2022-09-14T15:00:21.551482Z",
+     "iopub.status.idle": "2022-09-14T15:00:21.564146Z",
+     "shell.execute_reply": "2022-09-14T15:00:21.562828Z"
+    },
+    "papermill": {
+     "duration": 0.027575,
+     "end_time": "2022-09-14T15:00:21.567153",
+     "exception": false,
+     "start_time": "2022-09-14T15:00:21.539578",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "my_submission = pd.DataFrame({'Id': y_test.index, 'classification': y_pred})\n",
+    "\n",
+    "my_submission.to_csv('submission.csv', index=False)"
    ]
   }
  ],
@@ -948,14 +992,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 58.943857,
-   "end_time": "2022-09-14T14:49:04.056314",
+   "duration": 60.573421,
+   "end_time": "2022-09-14T15:00:24.199367",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-09-14T14:48:05.112457",
+   "start_time": "2022-09-14T14:59:23.625946",
    "version": "2.3.4"
   }
  },
